--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,8 @@
 TODO
- - count how many times won in a row
  - chrono
+     - start chrono on first cell clicked
  - grille autres tailles
  - design
+ - store records? (time record and number of win in a row record)
 
 BUGS:
