--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 TODO
  - grille autres tailles
- - indicate time and won in a row when winning and loosing
- - design
-    - design 'You Won' and 'You Lost' with popup message
+ - show all mines when loosing
+    - mine triggered in red
  - store records? (time record and number of win in a row record)
 
 BUGS:
+  
