--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 TODO
  - grille autres tailles
- - show all mines when loosing
-    - mine triggered in red
+ - set easy, intermediate and expert buttons as button group
+ - animate mine appearing when loosing
  - store records? (time record and number of win in a row record)
 
 BUGS:
