match 1and1 structure

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,10 @@
 TODO
+ - change structure to match 1and1
+ - change font family for numbers in matrix
+ - change restart button location
+ - when winning, fill empty cells with flags
  - google analytics
+ - jquery min, put it in main script folder in server
  - store records? (time record and number of win in a row record)
 
 BUGS:
